# music-transformer-playground

./: README.md
api/: .gitignore
api/src/app/: server.py  shared.py
backend/: .gitignore  Dockerfile  pyproject.toml  run.sh
backend/app/: main.py
backend/src/app/: generate_unconditional.py  server.py
backend/tests/: test_generate_unconditional.py
frontend/: .eslintrc.cjs  .eslintrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend-nextjs/: package.json  pnpm-lock.yaml
frontend-nextjs/app/: layout.tsx  page.tsx  providers.tsx  unconditional-generate.tsx
frontend/src/: App.tsx  main.tsx
frontend/src/assets/: from-scratch.midi
frontend/src/components/InputFileButton/: InputFileButton.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/LoadingSpinner/: LoadingSpinner.tsx
frontend/src/components/UnconditionalGenerate/: UnconditionalGenerate.tsx  index.ts
frontend/src/pages/: index.tsx
frontend/src/providers/: index.ts
frontend/src/providers/AudioContextProvider/: index.ts
frontend/src/providers/AudioContextProvider/components/: AudioContextProvider.tsx
frontend/src/providers/AudioContextProvider/contexts/: AudioContextContext.ts  index.ts
frontend/src/utils/: getMinMaxNoteNumber.ts
web/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/src/: App.tsx  Landing.tsx  index.css  main.tsx
web/src/components/Generator/: Error.tsx  Generator.tsx  Keyboard.tsx  LoadingSong.tsx  PlayIcon.tsx  Player.tsx  StopIcon.tsx  getGeneratedSong.ts  getMinMaxNotNumber.ts
web/src/components/Layout/: Layout.tsx  Providers.tsx
web/src/components/Loading/: Loading.tsx  Spinner.tsx
web/src/features/playground/: Playground.tsx
web/src/providers/AudioContextProvider/: AudioContextProvider.tsx  index.ts  shared.ts  useAudioContext.ts
(+3 files in other folders)
